fixed mobile layout problem

--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -4,12 +4,16 @@
     border: none!important;
 }
 
+.news-feed-text {
+    padding-left: 10px;
+}
+
 .news-feed-image {
     border-radius: 8px;
     width: 100%;
     max-width: 200px!important;
     max-height: 200px!important;
-    padding: 5px!important;
+    /*padding: 5px 10px!important;*/
 }
 
 .news-title, .notice .card-body h4{
